--- a/cuponeriastore/public/index.html
+++ b/cuponeriastore/public/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" href="favicon.png" type="image/png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <title>React App</title>
+  <title>Cuponeria Store</title>
 </head>
 
 <body>
